--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="dashboard">
     <div class="panel full-width" style="display: flex; justify-content: space-between; align-items: center; padding: 30px; margin-bottom: 30px; cursor: default;">
         <div style="display: flex; align-items: center; gap: 20px;">
-            <img src="assets/burgershot-logo.png" alt="Logo" style="width: 60px;">
+            <img src="assets/logo.png" alt="Logo" style="width: 60px;">
             <div>
                 <h1 style="color: var(--primary); font-size: 1.5rem;">Willkommen bei Burgershot Intern</h1>
                 <p style="opacity: 0.7;">Teamverwaltung & Organisation auf einen Blick.</p>
