--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
         </div>
     </div>
 
+    <div class="modal-backdrop" id="announceDetailsModal">
+    <div class="modal" style="width: 80%; max-width: 900px; max-height: 80vh; overflow-y: auto;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+            <h2 style="margin: 0;">📢 Business Announcements</h2>
+            <button onclick="document.getElementById('announceDetailsModal').style.display='none'" style="background: #444;">Schließen</button>
+        </div>
+
+        <div class="panel" style="background: rgba(255,255,255,0.05); margin-bottom: 20px;">
+            <textarea id="newAnnounceText" placeholder="Neuen Text hinzufügen..." style="width: 100%; height: 80px; margin-bottom: 10px;"></textarea>
+            <button onclick="addAnnouncement()" style="width: 100%;">Vorlage hinzufügen</button>
+        </div>
+
+        <div id="announceGrid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 15px;">
+            </div>
+    </div>
+</div>
+
     <script src="script.js"></script>
     <script>
         // 1. Login-Check direkt beim Laden
