--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             <p>Neue Bewerbungen im System.</p>
         </div>
 
+        <div class="panel big highlight" onclick="openAnnouncePanel()" style="cursor: pointer;">
+            <div class="panel-header">📢 BUSINESS ANNOUNCEMENTS</div>
+            <p>Vorlagen für Werbetexte ansehen & hinzufügen.</p>
+            <small style="opacity: 0.5;">Klick zum Öffnen</small>
+        </div>
+
         <div class="panel big center">
             <div class="panel-header">📋 Service</div>
         </div>
