--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
             <p>Neue Bewerbungen im System.</p>
         </div>
 
-        <div class="panel big highlight" onclick="openAnnouncePanel()" style="cursor: pointer;">
+        <div class="panel big highlight" onclick="location.href='announcements.html'" style="cursor: pointer;">
             <div class="panel-header">📢 BUSINESS ANNOUNCEMENTS</div>
             <p>Vorlagen für Werbetexte ansehen & hinzufügen.</p>
-            <small style="opacity: 0.5; display: block; margin-top: 10px;">Klick zum Öffnen</small>
+            <small style="opacity: 0.5; display: block; margin-top: 10px;">Vollbildansicht öffnen</small>
         </div>
+    
     </div> <div class="grid-bottom" style="margin-top: 25px;">
         <div class="panel small">📦 Orders</div>
         <div class="panel small">🏭 Lager</div>
