--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <p>Neue Bewerbungen im System.</p>
         </div>
 
-        <div class="panel big highlight" onclick="location.href='announcements.html'" style="cursor: pointer;">
+        <div class="panel big announcement-card" onclick="location.href='announcements.html'">
             <div class="panel-header">📢 BUSINESS ANNOUNCEMENTS</div>
             <p>Vorlagen für Werbetexte ansehen & hinzufügen.</p>
-            <small style="opacity: 0.5; display: block; margin-top: 10px;">Vollbildansicht öffnen</small>
+            <small class="hover-hint">Vollbildansicht öffnen</small>
         </div>
     
     </div> <div class="grid-bottom" style="margin-top: 25px;">
