--- a/management.html
+++ b/management.html
@@ -81,8 +81,13 @@
     <div id="tab-bewerber" class="mgmt-tab">
         <div class="panel">
             <div class="panel-header">📑 Bewerbungseingang</div>
-            <div class="grid-row grid-header">
-                <span>Name / Visum</span><span>Kontakt</span><span>Status</span><span style="text-align: right;">Aktionen</span>
+            <div class="grid-row grid-header" style="grid-template-columns: 1.2fr 0.8fr 1fr 1fr 0.8fr 0.8fr;">
+                <span>Name / Visum</span>
+                <span>Geb.</span>
+                <span>Kontakt</span>
+                <span>Fraktion / Zivi</span>
+                <span>Status</span>
+                <span style="text-align: right;">Aktion</span>
             </div>
             <div id="bewManagementList"></div>
         </div>
