--- a/management.html
+++ b/management.html
@@ -58,7 +58,7 @@
                 <div class="add-user-bar">
                     <input type="text" id="maName" placeholder="Name">
                     <input type="text" id="maTel" placeholder="Telefon">
-                    <input type="number" id="maGehalt" placeholder="Gehalt">
+                    <input type="number" id="maGehalt" value="10000">
                     <button onclick="uiAddMitarbeiter()">Hinzufügen</button>
                 </div>
             </div>
